0728 미니프젝 진행중

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <div id="root"></div>
 
 
+    <script
+  type="text/javascript"
+  src="//dapi.kakao.com/v2/maps/sdk.js?appkey=271613444b982990692d75516aed26c1&libraries=services,clusterer"
+></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html> 
